update: all images to a new generation format WebP

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="nav-cont">
                 <div class="header-logo-cont">
                     <a href="./index.html">
-                        <img src="./images/logo.png" alt="Temple Inn & Suites logo">
+                        <img src="./images/logo.webp" alt="Temple Inn & Suites logo">
                     </a>
                 </div>
                 <ul>
@@ -52,9 +52,9 @@
         <div class="hero">
             <div class="hero-img">
                 <picture>
-                    <source media="(min-width: 40rem) and (max-width: 64rem)" srcset="./images/medium.jpg">
-                    <source media="(min-width: 64rem)" srcset="./images/large.jpg">
-                    <img src="./images/small.jpg" alt="Hero Image">
+                    <source media="(min-width: 40rem) and (max-width: 64rem)" srcset="./images/medium.webp">
+                    <source media="(min-width: 64rem)" srcset="./images/large.webp">
+                    <img src="./images/small.webp" alt="Hero Image">
                 </picture>
             </div>
             <div class="hero-text">
@@ -69,7 +69,7 @@
         <section class="temple-description">
             <h2>Washington D.C Temple</h2>
             <p>The Washington D.C. Temple (formerly the Washington Temple) is the 18th constructed and 16th operating temple of The Church of Jesus Christ of Latter-day Saints. It is located in Kensington, Maryland, United States, just north of Washington, D.C., near the Capital Beltway.<br><br>The temple was dedicated in 1974 after an open house that attracted over 750,000 people, including several international dignitaries.</p>
-            <img src="./images/wdc-temple.jpg" alt="Front view of the Washington D.C Temple">
+            <img src="./images/wdc-temple.webp" alt="Front view of the Washington D.C Temple">
         </section>
         <!-- Local Weather -->
         <section class="main-weather">
@@ -92,7 +92,7 @@
     </main>
     <footer>
         <div class="footer-cont">
-            <a href="./index.html" class="footer-image"><img src="./images/logo-footer.png" alt="Website logo"></a>
+            <a href="./index.html" class="footer-image"><img src="./images/logo-footer.webp" alt="Website logo"></a>
             <div class="footer-main">
                 <div>
                     <h2>Location</h2>
