--- a/services/reception/index.html
+++ b/services/reception/index.html
@@ -18,7 +18,7 @@
             <div class="nav-cont">
                 <div class="header-logo-cont">
                     <a href="../../index.html">
-                        <img src="../../images/logo.png" alt="Temple Inn & Suites logo">
+                        <img src="../../images/logo.webp" alt="Temple Inn & Suites logo">
                     </a>
                 </div>
                 <ul>
@@ -52,9 +52,9 @@
         <div class="hero">
             <div class="hero-img">
                 <picture>
-                    <source media="(min-width: 40rem) and (max-width: 64rem)" srcset="../../images/medium4.jpg">
-                    <source media="(min-width: 64rem)" srcset="../../images/large4.jpg">
-                    <img src="../../images/small4.jpg" alt="Hero Image">
+                    <source media="(min-width: 40rem) and (max-width: 64rem)" srcset="../../images/medium4.webp">
+                    <source media="(min-width: 64rem)" srcset="../../images/large4.webp">
+                    <img src="../../images/small4.webp" alt="Hero Image">
                 </picture>
             </div>
             <div class="hero-text">
@@ -74,7 +74,7 @@
                 <li>- Special room equiped with private pool, king-size bed, and private patio</li><br>
             </ul>
         </div>
-        <img src="../../images/wedding1.jpg" alt="Temple Inn & Suites services">
+        <img src="../../images/wedding1.webp" alt="Temple Inn & Suites services">
         <div class="setup">
             <h1>Food and Setup</h1>
             <ul>
@@ -87,11 +87,11 @@
                 <li>- Photoshoot included</li><br>
             </ul>
         </div>   
-        <img src="../../images/wedding.png" alt="Temple Inn & Suites services">
+        <img src="../../images/wedding.webp" alt="Temple Inn & Suites services">
     </main>
     <footer>
         <div class="footer-cont">
-            <a href="../../index.html" class="footer-image"><img src="../../images/logo-footer.png" alt="Website logo"></a>
+            <a href="../../index.html" class="footer-image"><img src="../../images/logo-footer.webp" alt="Website logo"></a>
             <div class="footer-main">
                 <div>
                     <h2>Location</h2>
