--- a/services/index.html
+++ b/services/index.html
@@ -18,7 +18,7 @@
             <div class="nav-cont">
                 <div class="header-logo-cont">
                     <a href="../index.html">
-                        <img src="../images/logo.png" alt="Temple Inn & Suites logo">
+                        <img src="../images/logo.webp" alt="Temple Inn & Suites logo">
                     </a>
                 </div>
                 <ul>
@@ -52,9 +52,9 @@
         <div class="hero">
             <div class="hero-img">
                 <picture>
-                    <source media="(min-width: 40rem) and (max-width: 64rem)" srcset="../images/medium4.jpg">
-                    <source media="(min-width: 64rem)" srcset="../images/large4.jpg">
-                    <img src="../images/small4.jpg" alt="Hero Image">
+                    <source media="(min-width: 40rem) and (max-width: 64rem)" srcset="../images/medium4.webp">
+                    <source media="(min-width: 64rem)" srcset="../images/large4.webp">
+                    <img src="../images/small4.webp" alt="Hero Image">
                 </picture>
             </div>
             <div class="hero-text">
@@ -76,7 +76,7 @@
                 <li>- A family search center that supports family search and ordinance work</li><br>
             </ul>
         </div>
-        <img src="../images/services.jpg" alt="Temple Inn & Suites services">
+        <img src="../images/services.webp" alt="Temple Inn & Suites services">
         <div class="amenities">
             <h1>Free Amenities</h1>
             <ul>
@@ -89,11 +89,11 @@
                 <li>- Family history consultation and family ordinance card service</li><br>
             </ul>
         </div>   
-        <img src="../images/service-hotel.jpg" alt="Temple Inn & Suites services">
+        <img src="../images/service-hotel.webp" alt="Temple Inn & Suites services">
     </main>
     <footer>
         <div class="footer-cont">
-            <a href="../index.html" class="footer-image"><img src="../images/logo-footer.png" alt="Website logo"></a>
+            <a href="../index.html" class="footer-image"><img src="../images/logo-footer.webp" alt="Website logo"></a>
             <div class="footer-main">
                 <div>
                     <h2>Location</h2>
