--- a/services/temple-missionary/index.html
+++ b/services/temple-missionary/index.html
@@ -18,7 +18,7 @@
             <div class="nav-cont">
                 <div class="header-logo-cont">
                     <a href="../../index.html">
-                        <img src="../../images/logo.png" alt="Temple Inn & Suites logo">
+                        <img src="../../images/logo.webp" alt="Temple Inn & Suites logo">
                     </a>
                 </div>
                 <ul>
@@ -52,9 +52,9 @@
         <div class="hero">
             <div class="hero-img">
                 <picture>
-                    <source media="(min-width: 40rem) and (max-width: 64rem)" srcset="../../images/medium4.jpg">
-                    <source media="(min-width: 64rem)" srcset="../../images/large4.jpg">
-                    <img src="../../images/small4.jpg" alt="Hero Image">
+                    <source media="(min-width: 40rem) and (max-width: 64rem)" srcset="../../images/medium4.webp">
+                    <source media="(min-width: 64rem)" srcset="../../images/large4.webp">
+                    <img src="../../images/small4.webp" alt="Hero Image">
                 </picture>
             </div>
             <div class="hero-text">
@@ -69,18 +69,18 @@
             <h1>Church-Service Missionary</h1>
             <p>The Church-service mission program includes some full-time opportunities that usually range from six months to two years of service, depending on the current needs and availability.<br><br>Tens of thousands of Church-service missionaries are needed every year to answer the call and devote the time they have to serving. Specific calls may vary, but all Church-service missions work to provide relief, comfort, and support to people around the world.</p>
         </div>
-        <img src="../../images/missionary.jpg" alt="Temple Inn & Suites services">
+        <img src="../../images/missionary.webp" alt="Temple Inn & Suites services">
         <h1 class="suite-gallery-title">Our Suites</h1>
         <div class="suite-gallery">
-            <img src="../../images/suite1.jpg" alt="Our Suites">
-            <img src="../../images/suite2.jpg" alt="Our Suites">
-            <img src="../../images/suite3.jpg" alt="Our Suites">
-            <img src="../../images/suite4.jpg" alt="Our Suites">
+            <img src="../../images/suite1.webp" alt="Our Suites">
+            <img src="../../images/suite2.webp" alt="Our Suites">
+            <img src="../../images/suite3.webp" alt="Our Suites">
+            <img src="../../images/suite4.webp" alt="Our Suites">
         </div>
     </main>
     <footer>
         <div class="footer-cont">
-            <a href="../../index.html" class="footer-image"><img src="../../images/logo-footer.png" alt="Website logo"></a>
+            <a href="../../index.html" class="footer-image"><img src="../../images/logo-footer.webp" alt="Website logo"></a>
             <div class="footer-main">
                 <div>
                     <h2>Location</h2>
