--- a/temples/index.html
+++ b/temples/index.html
@@ -18,7 +18,7 @@
             <div class="nav-cont">
                 <div class="header-logo-cont">
                     <a href="./index.html">
-                        <img src="../images/logo.png" alt="Temple Inn & Suites logo">
+                        <img src="../images/logo.webp" alt="Temple Inn & Suites logo">
                     </a>
                 </div>
                 <ul>
@@ -52,9 +52,9 @@
         <div class="hero">
             <div class="hero-img">
                 <picture>
-                    <source media="(min-width: 40rem) and (max-width: 64rem)" srcset="../images/medium3.jpg">
-                    <source media="(min-width: 64rem)" srcset="../images/large3.jpg">
-                    <img src="../images/small3.jpg" alt="Hero Image">
+                    <source media="(min-width: 40rem) and (max-width: 64rem)" srcset="../images/medium3.webp">
+                    <source media="(min-width: 64rem)" srcset="../images/large3.webp">
+                    <img src="../images/small3.webp" alt="Hero Image">
                 </picture>
             </div>
             <div class="hero-text">
@@ -88,7 +88,7 @@
     </main>
     <footer>
         <div class="footer-cont">
-            <a href="./index.html" class="footer-image"><img src="../images/logo-footer.png" alt="Website logo"></a>
+            <a href="./index.html" class="footer-image"><img src="../images/logo-footer.webp" alt="Website logo"></a>
             <div class="footer-main">
                 <div>
                     <h2>Location</h2>
